--- a/templates/listings.html
+++ b/templates/listings.html
@@ -15,7 +15,7 @@
 
         <div class="flex space-x-8 text-md font-bold text-[#4F2FC0]">
             <a href="{% url 'listings:feed' %}" class="hover:text-purple-600 transition-colors border-b-2 border-purple-600">LISTINGS</a>
-            <a href="{% url 'musician_profile' %}" class="hover:text-purple-600 transition-colors">PROFILE</a>
+            <a href="{% url 'accounts:musician_profile' %}" class="hover:text-purple-600 transition-colors">PROFILE</a>
             <a href="#" class="hover:text-purple-600 transition-colors">APPLICATIONS</a>
             <a href="{% url 'logout' %}" class="hover:text-purple-600 transition-colors">LOGOUT</a>
         </div>
