--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -26,7 +26,7 @@
             <p class="mt-2 text-center text-sm text-gray-600">Please enter your details.</p>
         </div>
 
-        <form class="mt-8 space-y-6" method="POST" action="{% url 'login' %}">
+        <form class="mt-8 space-y-6" method="POST" action="{% url 'accounts:login' %}">
             {% csrf_token %}
             <div class="rounded-md space-y-3">
                 <div>
@@ -51,7 +51,7 @@
 
             <div class="text-center">
                 <span class="text-gray-600">Not on Harmonix?</span>
-                <a href="{% url 'register' %}" class="font-semibold text-[#4F2FC0] hover:text-[indigo-500]">Get started here</a>
+                <a href="{% url 'accounts:register' %}" class="font-semibold text-[#4F2FC0] hover:text-[indigo-500]">Get started here</a>
             </div>
         </form>
     </div>
