--- a/accounts/templates/accounts/view_profile.html
+++ b/accounts/templates/accounts/view_profile.html
@@ -20,13 +20,13 @@
                     <a href="{% url 'listings:feed' %}" class="hover:text-[#4F2FC0] transition-colors">
                         LISTINGS
                     </a>
-                    <a href="{% url 'musician_profile' %}" class="hover:text-[#4F2FC0] transition-colors">
+                    <a href="{% url 'accounts:musician_profile' %}" class="hover:text-[#4F2FC0] transition-colors">
                         PROFILE
                     </a>
                     <a href="{% url 'applications:my_applications' %}" class="hover:text-[#4F2FC0] transition-colors">
                         APPLICATIONS
                     </a>
-                    <a href="{% url 'logout' %}" class="hover:text-[#4F2FC0] transition-colors">
+                    <a href="{% url 'accounts:logout' %}" class="hover:text-[#4F2FC0] transition-colors">
                         LOGOUT
                     </a>
                 </div>
@@ -72,7 +72,7 @@
                     </div>
                     
                     {% if is_own_profile %}
-                    <a href="{% url 'edit_profile' %}" 
+                    <a href="{% url 'accounts:edit_profile' %}" 
                        class="px-4 py-2 border border-gray-300 text-gray-700 rounded-md hover:bg-gray-50 transition-colors">
                         Edit Profile
                     </a>
