--- a/listings/templates/listings/listing_detail.html
+++ b/listings/templates/listings/listing_detail.html
@@ -20,13 +20,13 @@
                     <a href="{% url 'listings:feed' %}" class="text-[#4F2FC0] border-b-2 border-[#4F2FC0] pb-4 -mb-px">
                         LISTINGS
                     </a>
-                    <a href="{% url 'musician_profile' %}" class="hover:text-[#4F2FC0] transition-colors">
+                    <a href="{% url 'accounts:musician_profile' %}" class="hover:text-[#4F2FC0] transition-colors">
                         PROFILE
                     </a>
                     <a href="{% url 'applications:my_applications' %}" class="hover:text-[#4F2FC0] transition-colors">
                         APPLICATIONS
                     </a>
-                    <a href="{% url 'logout' %}" class="hover:text-[#4F2FC0] transition-colors">
+                    <a href="{% url 'accounts:logout' %}" class="hover:text-[#4F2FC0] transition-colors">
                         LOGOUT
                     </a>
                 </div>
