--- a/templates/home.html
+++ b/templates/home.html
@@ -18,9 +18,9 @@
 
         <div class="flex space-x-8 text-md font-bold text-[#4F2FC0]">
             <a href="#" class="hover:text-purple-600 transition-colors">HOME</a>
-            <a href="{% url 'musician_profile' %}" class="hover:text-purple-600 transition-colors">PROFILE</a>
+            <a href="{% url 'accounts:musician_profile' %}" class="hover:text-purple-600 transition-colors">PROFILE</a>
             <a href="#" class="hover:text-purple-600 transition-colors">LISTINGS</a>
-            <a href="{% url 'logout' %}" class="hover:text-purple-600 transition-colors">LOGOUT</a>
+            <a href="{% url 'accounts:logout' %}" class="hover:text-purple-600 transition-colors">LOGOUT</a>
         </div>
     </nav>
 
