refactor: move registration JS files to accounts app static folder
Reorganize static files following Django best practices by moving
account-specific JavaScript files to the accounts app.

Changes:
- Move static/js/registration.js to accounts/static/accounts/js/
- Move static/js/password-strength.js to accounts/static/accounts/js/
- Move static/js/form-validation.js to accounts/static/accounts/js/
- Update register.html to reference new file paths
- Remove empty static/js/ directory

Benefits:
- Better app encapsulation
- Follows Django convention for app-specific static files
- Easier to maintain and reuse accounts app
- Clearer file organization

All registration functionality remains intact and working.

--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -172,11 +172,11 @@
 
 {% block extra_js %}
 <!-- Load utilities first -->
-<script src="{% static 'js/form-validation.js' %}"></script>
-<script src="{% static 'js/password-strength.js' %}"></script>
+<script src="{% static 'accounts/js/form-validation.js' %}"></script>
+<script src="{% static 'accounts/js/password-strength.js' %}"></script>
 
 <!-- Load registration functionality -->
-<script src="{% static 'js/registration.js' %}"></script>
+<script src="{% static 'accounts/js/registration.js' %}"></script>
 
 <!-- Pass Django template context to JavaScript -->
 <script>
